# openclaw_archiver_plugin

./: .gitignore  README.md  STATUS.md  issues.md  prd.md  pyproject.toml
bridge/openclaw-archiver/: index.test.ts  index.ts  openclaw.plugin.json  package.json  tsconfig.json
deploy/: openclaw-archiver.service
docs/: README.md  architecture.md  data_model.md  requirements.md  review_notes.md  sprint_state.md  test_plan.md  ux_spec.md
src/openclaw_archiver/: __init__.py  __main__.py  cmd_edit.py  cmd_help.py  cmd_list.py  cmd_project_delete.py  cmd_project_list.py  cmd_project_rename.py  cmd_remove.py  cmd_save.py  cmd_search.py  db.py  dispatcher.py  formatters.py  migrations.py  parser.py  plugin.py  schema_v1.py  server.py
tests/: test_cmd_edit.py  test_cmd_help.py  test_cmd_list.py  test_cmd_project_delete.py  test_cmd_project_list.py  test_cmd_project_rename.py  test_cmd_remove.py  test_cmd_save.py  test_cmd_search.py  test_db.py  test_dispatcher.py  test_isolation.py  test_mrkdwn_compliance.py  test_parser.py  test_schema_migration.py  test_server.py  test_smoke.py  test_ux_messages.py
