[project]
name = "openclaw-archiver"
version = "0.1.0"
description = "OpenClaw Archiver plugin for Slack — personal message link management via DM"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "pillip" },
]
keywords = ["openclaw", "archiver", "slack", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.entry-points."openclaw.plugins"]
archiver = "openclaw_archiver.plugin:handle_message"

[project.scripts]
openclaw-archiver-server = "openclaw_archiver.server:run"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".claude-kit", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
target-version = ["py311"]
line-length = 120
extend-exclude = '''
/(
    \.claude-kit
  | \.claude
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_archiver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
